--- a/SpringBootSecurityDemo/src/main/resources/templates/fragments/commonfragments.html
+++ b/SpringBootSecurityDemo/src/main/resources/templates/fragments/commonfragments.html
@@ -114,6 +114,8 @@
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 		<form method="post" th:action="@{${url}}"> <!-- action="/user/updateUser" -->
 			<h2>Update Profile. <small>Change one or many of the following properties.</small></h2><br>
+			
+			<input type="hidden" name="userId" id="userId" th:value="${updateuser.getUserId()}" required>	
 
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
@@ -134,7 +136,8 @@
 			
 			<div class="form-group">
 				<label for="username" class="title">User Name</label><span class="star"> *</span>
-				<input type="text" name="username" id="username" class="form-control input-lg" th:value="${updateuser.getUsername()}"
+				<input type="text" name="username" id="username" class="form-control input-lg" 
+				th:value="${updateuser.getUsername()}" readOnly
 				pattern="^([a-zA-Z0-9\-\.]+)$" minlength="4"  required>
 			</div>
 			
